# mecha-device-test

./: Cargo.toml  README.md  config.yaml  log.txt  mecha-device-test_0.1.0.bb
mecha-device-sdk/mecha-adc/: Cargo.toml
mecha-device-sdk/mecha-adc/src/: adc.rs  lib.rs
mecha-device-sdk/mecha-camera/: Cargo.toml
mecha-device-sdk/mecha-camera/src/: camera.rs  lib.rs
mecha-device-sdk/mecha-cpu/: Cargo.toml
mecha-device-sdk/mecha-cpu/src/: cpu.rs  lib.rs
mecha-device-sdk/mecha-display/: Cargo.toml
mecha-device-sdk/mecha-display/src/: display.rs  lib.rs
mecha-device-sdk/mecha-gyro/: Cargo.toml
mecha-device-sdk/mecha-gyro/src/: gyro.rs  lib.rs
mecha-device-sdk/mecha-led/: Cargo.toml
mecha-device-sdk/mecha-led/src/: led.rs  lib.rs
mecha-device-sdk/mecha-mic/: Cargo.toml
mecha-device-sdk/mecha-mic/src/: arecord.rs  lib.rs
mecha-device-sdk/mecha-power-supply/: Cargo.toml
mecha-device-sdk/mecha-power-supply/src/: lib.rs  power.rs
mecha-device-sdk/mecha-pwm/: Cargo.toml
mecha-device-sdk/mecha-pwm/src/: lib.rs  pwm.rs
mecha-device-sdk/mecha-trust-ic/: Cargo.toml
mecha-device-sdk/mecha-trust-ic/src/: lib.rs  trust_ic.rs
src/: base_cli.rs  main.rs  test_base.rs
src/tests/adc/: adc_data.rs
src/tests/battery/: battery_charging.rs  battery_detect.rs
src/tests/camera/: capture_image.rs
src/tests/cpu/: cpu_stress_test.rs
src/tests/display/: display_brightness.rs  display_detect.rs
src/tests/gyro/: gyro_data.rs  gyro_detect.rs
src/tests/led/: led_color_test.rs  led_detect.rs
src/tests/mic/: audio_playback.rs  audio_record.rs
(+9 files in other folders)
