[package]
name = "mecha-device-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dhruveshb-mecha/mecha-device-test"
homepage = "https://github.com/dhruveshb-mecha/mecha-device-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
mecha-display = { path = "mecha-device-sdk/mecha-display" }
mecha-camera = { path = "mecha-device-sdk/mecha-camera" }
mecha-power-supply = { path = "mecha-device-sdk/mecha-power-supply" }
mecha-gyro = { path = "mecha-device-sdk/mecha-gyro" }
mecha-mic = { path = "mecha-device-sdk/mecha-mic" }
mecha-led = { path = "mecha-device-sdk/mecha-led" }
mecha-pwm = { path = "mecha-device-sdk/mecha-pwm" }
# display ={ path = "device-sdk/display"}
